URL->URI and added mechanism to disable host verification for self-signed SSL certs